added windows, added telerik rad buttons

--- a/wpf app telerik/MainWindow.xaml
+++ b/wpf app telerik/MainWindow.xaml
@@ -5,28 +5,34 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpf_app_telerik"
-        xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" x:Class="wpf_app_telerik.MainWindow"
+        xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" xmlns:Effects="clr-namespace:Telerik.Windows.Controls.ColorEditor.Effects;assembly=Telerik.Windows.Controls.Input" x:Class="wpf_app_telerik.MainWindow"
         mc:Ignorable="d"
         Title="Budget Calculator" Height="450" Width="800" Background="#FF0C0202">
     <Grid>
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1.5" StartPoint="0.5,0">
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="White"/>
-                <GradientStop Color="White" Offset="1"/>
+                <GradientStop Color="#FFB7B7B7" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <telerik:Label Content="Main Menu" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="92" FontSize="16" FontFamily="Yu Gothic UI SemiBold" Margin="5,13,0,0"/>
+        <telerik:Label Content="Main Menu" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="92" FontSize="16" FontFamily="Yu Gothic UI Regular" Margin="5,13,0,0"/>
         <Border Width="1" Margin="102,8,0,0" Background="#8888" HorizontalAlignment="Left" Height="37" VerticalAlignment="Top"/>
         <telerik:CartesianCustomLineAnnotation HorizontalAlignment="Left" Height="1" Margin="50,350,0,0" VerticalAlignment="Top" Width="48"/>
         <telerik:Label Content="General" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="92" FontSize="16" FontFamily="Yu Gothic UI Regular" Margin="108,13,0,0"/>
-        <Grid HorizontalAlignment="Left" Height="378" VerticalAlignment="Top" Width="258" Margin="1,40,0,0">
-            <telerik:Tile Content="Start" HorizontalAlignment="Center" Height="126" VerticalAlignment="Top" Width="257"/>
-            <telerik:Tile Content="Instruction" HorizontalAlignment="Center" Height="126" VerticalAlignment="Center" Width="256"/>
-            <telerik:Tile x:Name="exitButton" Content="Exit" HorizontalAlignment="Center" Height="126" Margin="0,252,0,0" VerticalAlignment="Top" Width="257">
-                <telerik:Tile.Background>
-                    <ImageBrush TileMode="Tile" ImageSource="/exit.png" Stretch="UniformToFill"/>
-                </telerik:Tile.Background>
-            </telerik:Tile>
-        </Grid>
+        <telerik:RadButton Content="Start" HorizontalAlignment="Left"  Height="80" Margin="10,68,0,0" VerticalAlignment="Top" Width="227" BorderBrush="White" Foreground="Black" FontSize="22" Background="#FFFFD1AA">
+            <telerik:RadButton.Effect>
+                <DropShadowEffect/>
+            </telerik:RadButton.Effect>
+        </telerik:RadButton>
+        <telerik:RadButton Content="Instructions" HorizontalAlignment="Left"  Height="80" Margin="10,168,0,0" VerticalAlignment="Top" Width="227" BorderBrush="White" Foreground="Black" FontSize="22" Background="#FFFFD1AA" Click="RadButton_Click_2">
+            <telerik:RadButton.Effect>
+                <DropShadowEffect/>
+            </telerik:RadButton.Effect>
+        </telerik:RadButton>
+        <telerik:RadButton Content="Exit" HorizontalAlignment="Left"  Height="80" Margin="10,265,0,0" VerticalAlignment="Top" Width="227" BorderBrush="White" Foreground="Black" FontSize="22" Background="#FFFFD1AA" Click="RadButton_Click">
+            <telerik:RadButton.Effect>
+                <DropShadowEffect/>
+            </telerik:RadButton.Effect>
+        </telerik:RadButton>
     </Grid>
 </Window>
