--- a/wpf app telerik/Insctruction.xaml
+++ b/wpf app telerik/Insctruction.xaml
@@ -10,8 +10,8 @@
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="White"/>
-                <GradientStop Color="#FFCCCCCC" Offset="1"/>
+                <GradientStop Color="#FFFFE7E7"/>
+                <GradientStop Color="#FFFFABAB" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
 
@@ -19,7 +19,7 @@
         <Border Width="1" Margin="102,8,0,0" Background="#8888" HorizontalAlignment="Left" Height="37" VerticalAlignment="Top"/>
         <telerik:Label Content="General" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="92" FontSize="16" FontFamily="Yu Gothic UI Regular" Margin="108,13,0,0"/>
         <TextBlock HorizontalAlignment="Left" Height="234" Margin="10,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="649"><Run Text="Aplikacja ma za zadanie pomóc w obliczaniu budżetu domowego za pomocą wprowadzonych przez uzytkownika danych"/><LineBreak/><Run/><LineBreak/><Run Text="1.Wprowadzane dane powinny mieć postać tylko i wyłącznie liczb (bez liter, znaków specjalnych suma kwoty zarabianej przez wszystkich członków gospodarstwa domowego NETTO."/><LineBreak/><Run Text="Wydatki"/><LineBreak/><Run Text=" - wszelakiego rodzaju wydatki na gospodarstwo domowe (rachunki, zakupy, abonamenty, media"/><LineBreak/><Run Text="Dochod"/><LineBreak/><Run Text=" - wszelakiego rodzaju przychody na jedno gospodarstwo rodzinne pomniejszone o wymagane kwoty podatku"/><LineBreak/><Run Text=" tzw. &quot;Dochod&quot;"/></TextBlock>
-        <telerik:RadButton Content="Exit" HorizontalAlignment="Left"  Height="80" Margin="10,217,0,0" VerticalAlignment="Top" Width="227" BorderBrush="White" Foreground="Black" FontSize="22" Background="#FFFFD1AA" Click="RadButton_Click">
+        <telerik:RadButton Content="Exit" HorizontalAlignment="Left"  Height="80" Margin="10,217,0,0" VerticalAlignment="Top" Width="227" BorderBrush="#FFFF0B00" Foreground="Black" FontSize="22" Background="#FFFF6962" Click="RadButton_Click">
             <telerik:RadButton.Effect>
                 <DropShadowEffect/>
             </telerik:RadButton.Effect>
