--- a/wpf app telerik/MainWindow.xaml
+++ b/wpf app telerik/MainWindow.xaml
@@ -11,25 +11,25 @@
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="White"/>
-                <GradientStop Color="#FFB7B7B7" Offset="1"/>
+                <GradientStop Color="#FFFFE7E7"/>
+                <GradientStop Color="#FFFFABAB" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
         <telerik:Label Content="Main Menu" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="92" FontSize="16" FontFamily="Yu Gothic UI Regular" Margin="5,13,0,0"/>
         <Border Width="1" Margin="102,8,0,0" Background="#8888" HorizontalAlignment="Left" Height="37" VerticalAlignment="Top"/>
         <telerik:CartesianCustomLineAnnotation HorizontalAlignment="Left" Height="1" Margin="50,350,0,0" VerticalAlignment="Top" Width="48"/>
         <telerik:Label Content="General" HorizontalAlignment="Left" Height="27" VerticalAlignment="Top" Width="92" FontSize="16" FontFamily="Yu Gothic UI Regular" Margin="108,13,0,0"/>
-        <telerik:RadButton Content="Start" HorizontalAlignment="Left"  Height="80" Margin="10,68,0,0" VerticalAlignment="Top" Width="227" BorderBrush="White" Foreground="Black" FontSize="22" Background="#FFFFD1AA">
+        <telerik:RadButton Content="Start" HorizontalAlignment="Left"  Height="80" Margin="10,68,0,0" VerticalAlignment="Top" Width="227" BorderBrush="#FFFF0B00" Foreground="Black" FontSize="22" Background="#FFFF6962" Click="RadButton_Click_1">
             <telerik:RadButton.Effect>
                 <DropShadowEffect/>
             </telerik:RadButton.Effect>
         </telerik:RadButton>
-        <telerik:RadButton Content="Instructions" HorizontalAlignment="Left"  Height="80" Margin="10,168,0,0" VerticalAlignment="Top" Width="227" BorderBrush="White" Foreground="Black" FontSize="22" Background="#FFFFD1AA" Click="RadButton_Click_2">
+        <telerik:RadButton Content="Instructions" HorizontalAlignment="Left"  Height="80" Margin="10,168,0,0" VerticalAlignment="Top" Width="227" BorderBrush="#FFFF0B00" Foreground="Black" FontSize="22" Background="#FFFF6962" Click="RadButton_Click_2">
             <telerik:RadButton.Effect>
                 <DropShadowEffect/>
             </telerik:RadButton.Effect>
         </telerik:RadButton>
-        <telerik:RadButton Content="Exit" HorizontalAlignment="Left"  Height="80" Margin="10,265,0,0" VerticalAlignment="Top" Width="227" BorderBrush="White" Foreground="Black" FontSize="22" Background="#FFFFD1AA" Click="RadButton_Click">
+        <telerik:RadButton Content="Exit" HorizontalAlignment="Left"  Height="80" Margin="10,265,0,0" VerticalAlignment="Top" Width="227" BorderBrush="#FFFF0B00" Foreground="Black" FontSize="22" Background="#FFFF6962" Click="RadButton_Click">
             <telerik:RadButton.Effect>
                 <DropShadowEffect/>
             </telerik:RadButton.Effect>
